# minesweeper-c

./: CMakeLists.txt  README.md  Session.vim  config.c  config.h  config.toml  field.c  field.h  game.c  game.h  global.c  global.h  main.c  ui.c  ui.h
